fixed scrollbar

--- a/interface.css
+++ b/interface.css
@@ -5,7 +5,6 @@
     min-height: 700px;
     border-radius: 1%;
     border: 3px solid black;
-    /*background-color: lightgrey;*/
     background-image: url("nicholas-green-rAsESO5Puqw-unsplash.jpg");
     background-size: 100% 100%;
     left: 50%;
@@ -23,6 +22,26 @@
     backdrop-filter: blur(2px);
 }
 
+/* width */
+::-webkit-scrollbar {
+    height: 50%;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f100;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #88888820;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #55555530;
+}
+
 .scrollerGS {
     border:2px lightgrey;
 
@@ -35,10 +54,6 @@
     height: 3%;
 
     overflow: auto;
-}
-
-.container::-webkit-scrollbar {
-    display: None;
 }
 
 .scrollerC {
